# ros_testing_templates

./: .clang-format  .clang-tidy  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Doxyfile  LICENSE  README.md  README_8md.html  action_8hpp.html  action_8hpp__dep__incl.map  action_8hpp__dep__incl.md5  action_8hpp__incl.map  action_8hpp__incl.md5  action_8hpp_source.html  annotated.html  basic__test_8cpp.html  basic__test_8cpp__incl.map  basic__test_8cpp__incl.md5  basic__test_8cpp_source.html  basic__test_8test_8py.html  basic__test_8test_8py_source.html  build.sh  classIncrementer-members.html  classIncrementer.html  classMap-members.html  classMap.html  classMap_a21278cdae4a80bd24a58f07b2d335585_icgraph.map  classMap_a21278cdae4a80bd24a58f07b2d335585_icgraph.md5  classMap_a2d26c288c1336257492cf45c954fbdc6_icgraph.map  classMap_a2d26c288c1336257492cf45c954fbdc6_icgraph.md5  classMap_a9ddfce89a5714e0ba94e0210d749c1f4_icgraph.map  classMap_a9ddfce89a5714e0ba94e0210d749c1f4_icgraph.md5  classMap_aa413a560ed38b04073317ef9370c4bf8_icgraph.map  classMap_aa413a560ed38b04073317ef9370c4bf8_icgraph.md5  classMap_ae4caa7dbace4006cbc2a26464deacd8e_icgraph.map  classMap_ae4caa7dbace4006cbc2a26464deacd8e_icgraph.md5  classPathGenerator-members.html  classPathGenerator.html  (+422 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yaml  docker.yaml  doxygen.yaml  format.yaml  naive_tests.yaml
docs/roscon-2022/: talk-proposal.md
example_msgs/: CMakeLists.txt  package.xml
example_srvs/: CMakeLists.txt  package.xml
example_srvs/msg/: GetPathCodes.msg  SetMapCodes.msg
example_srvs/srv/: GetPath.srv  SetMap.srv
functional_programming_tests/: CMakeLists.txt  README.md  package.xml
functional_programming_tests/include/pathing/: collision_checking.hpp  pathing.hpp  pathing_manager.hpp  utilities.hpp
functional_programming_tests/src/: pathing.cpp  pathing_manager.cpp  pathing_node.cpp  utilities.cpp
functional_programming_tests/test/: main.cpp  with_dependency_injection.cpp  with_functional_programming.cpp  with_parameter_factory.cpp  with_parameters.cpp  without_functional_programming.cpp
functional_programming_tests/test/launch/: with_parameters.test.py
injection_messages/srv/: OneNumber.srv
minimal_integration_test/: CMakeLists.txt  package.xml
minimal_integration_test/test/: basic_test.cpp
minimal_integration_test/test/launch/: basic_test.test.py
naive/: CMakeLists.txt  package.xml
naive/include/naive/: incrementer.h  incrementer.hpp  ros_middleware.hpp
naive/src/: incrementer.cpp  node.cpp  ros_middleware.cpp
naive/test/: incrementer_test.cpp
naive_superclass/: CMakeLists.txt  package.xml
naive_superclass/include/naive_superclass/: incrementer.hpp
naive_superclass/src/: incrementer.cpp  node.cpp
naive_superclass/test/: incrementer_test.cpp
publisher_subscriber/: package.xml
publisher_subscriber/cmake/: CompilerWarnings.cmake  Doxygen.cmake
publisher_subscriber/include/publisher_subscriber/: incrementer.h  ros_middleware.h
publisher_subscriber/src/: incrementer.cpp  node.cpp  ros_middleware.cpp
publisher_subscriber/test/: incrementer_test.cpp
rcl_handle/: CMakeLists.txt  package.xml
rcl_handle/test/: CMakeLists.txt
ros1/: Dockerfile  README.md  build.sh  run.sh  testing.md
ros1/injection_messages/: CMakeLists.txt  package.xml
ros1/naive/: package.xml
ros1/naive/include/naive/: incrementer.h
ros1/naive/src/: incrementer.cpp  node.cpp
ros1/naive/test/: incrementer_test.test
ros1/publisher_subscriber/: CMakeLists.txt
ros1/publisher_subscriber/include/publisher_subscriber/: incrementer.h  ros_middleware.h
ros1/publisher_subscriber/src/: incrementer.cpp  node.cpp  ros_middleware.cpp
ros1/service_call/: CMakeLists.txt
ros1/service_call/include/service_call/: incrementer.h  ros_middleware.h
ros1/service_call/src/: incrementer.cpp  node.cpp  ros_middleware.cpp
ros2/: .env  Dockerfile  LICENSE  README.md  compose.dev.yml  upstream.repos
ros2/example_msgs/action/: Simple.action
ros2/examples/action/: CMakeLists.txt  package.xml
ros2/functional_programming_tests/: CMakeLists.txt  package.xml
ros2/functional_programming_tests/test/: CMakeLists.txt  good_test.cpp
ros2/infrastructure/colcon-mixin/: clang-10.mixin  en-alu-san.mixin  en-clang-tidy.mixin  en-msan.mixin  en-tsan.mixin  index.yaml
ros2/infrastructure/repo_cmake/: .tsan-blacklist  CMakeLists.txt  package.xml
ros2/infrastructure/repo_cmake/cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
ros2/minimal_integration_test/: CMakeLists.txt  LICENSE  README.md  package.xml
ros2/minimal_integration_test/test/: basic_test.cpp
ros2/minimal_integration_test/test/launch/: basic_test.test.py
ros2/naive/: CMakeLists.txt  package.xml
ros2/naive/include/naive/: incrementer.hpp
ros2/naive/src/: incrementer.cpp  node.cpp
ros2/rcl_handle/: CMakeLists.txt  package.xml
ros2/rcl_handle/include/rcl_handle/: action.hpp
ros2/rcl_handle/test/: CMakeLists.txt  test_action.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+42 more)
service_call/: package.xml
service_call/include/service_call/: incrementer.h  ros_middleware.h
service_call/src/: node.cpp  ros_middleware.cpp
