<?xml version="1.0"?>
<package>
  <name>publisher_subscriber</name>
  <version>0.0.0</version>
  <description>
    Pub/Sub example of how to use Dependency Injection with ROS.
  </description>
  <author email="griswald.brooks@gmail.com">Griswald Brooks</author>
  <maintainer email="griswald.brooks@gmail.com">Griswald Brooks</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rosunit</test_depend>
</package>
