<package>
  <name>injection_messages</name>
  <version>0.0.0</version>
  <description>Messages used in Dependency Injection examples.</description>
  <author email="griswald.brooks@gmail.com">Griswald Brooks</author>
  <maintainer email="griswald.brooks@gmail.com">Griswald Brooks</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
