<?xml version="1.0"?>
<package>
  <name>naive</name>
  <version>0.0.0</version>
  <description>
    Naive pub/sub example without using dependency injection.
  </description>
  <author email="griswald.brooks@gmail.com">Griswald Brooks</author>
  <maintainer email="griswald.brooks@gmail.com">Griswald Brooks</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rostest</test_depend>
</package>
