<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcl_handle</name>
  <version>0.0.1</version>
  <description>Interfaces for abstracting ROS from implementation</description>
  <maintainer email="griswald.brooks@picknik.ai">Griswald Brooks</maintainer>
  <license>MIT</license>
  <author>Griswald Brooks</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>repo_cmake</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>example_msgs</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
