<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action</name>
  <version>0.0.0</version>
  <description>Example of how to use rcl_handle::action_server</description>
  <author>Griswald Brooks</author>
  <maintainer email="griswald.brooks@picknik.ai">Griswald Brooks</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>repo_cmake</depend>
  <depend>example_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rcl_handle</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
